Attempt fix #2 resume display on mobile

--- a/css/resume.css
+++ b/css/resume.css
@@ -215,11 +215,3 @@ html, body {
     font-size: 16px;
     margin: 0;
 }
-
-
-
-
-/* ------- Screen width < 900px -------  */
-@media screen and (max-width: 900px) {
-    html, body { width: 8.5in; }
-}
